k8s-dev-k3d/istio/resources/04-httproute-product-service.yaml
# Product Service HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: product-service-route
  namespace: ecommerce
spec:
  parentRefs:
    - name: ecommerce-gateway
  hostnames:
    - "api.ecommerce.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/products
      backendRefs:
        - name: product-service
          port: 8080
          weight: 100
